录音动画实现，双缓冲方法（考虑中）